--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,31 @@
   margin: 0;
   padding: 0;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body, h1, h2, h3, p, div {
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: rgba(255,255,255,0);
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+  border-radius: 0.625rem;
+  background-color: rgba(255,255,255,0);
+}
+
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb {
+  border-radius: 0.625rem;
+  background-color: rgba(255,255,255,0);
+}
