--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body, h1, h2, h3, p, div {
   padding: 0;
 }
 
+img {
+  user-select: none;
+  width: 100%;
+  height: 100%;
+}
+
 ::-webkit-scrollbar {
   width: 0.5rem;
   height: 0.5rem;
