--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ img {
   user-select: none;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  object-fit: cover;
+  object-position: center center;
 }
 
 ::-webkit-scrollbar {
